charts/auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  auth-service
  namespace: dev
  labels:
    app:  auth-service
spec:
  selector:
    matchLabels:
      app: auth-service
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  auth-service
    spec:
      containers:
      - name:  auth-service
        image: reg.local/auth-service:latest
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
  namespace: dev
spec:
  selector:
    app: auth-service
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
