charts/auth/ingress_route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: local-api-ingressroute
  namespace: dev
spec:
  routes:
    - match: Host(`api.local`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: auth-svc
          port: 8080
    # - match: Host(`api.local`) && PathPrefix(`/{path:(.*)/private/(.*)}`)     # this works but will depreciate in v3
    # - match: Host(`api.local`) && PathRegexp(`^/.*private/.*$`)               # this doesn't work now but will work in v3
    - match: Host(`api.local`) && Path(`/{path:.*private/.*}`)                # this also works
      kind: Rule
      services:
        - name: auth-svc
          port: 8080
      middlewares:
        - name: fwdauth-check
---
